RESOLVED FIXED295448
REGRESSION (iOS 26): Scrubbing video on multiple sites causes back/forward navigation
https://bugs.webkit.org/show_bug.cgi?id=295448
Summary REGRESSION (iOS 26): Scrubbing video on multiple sites causes back/forward na...
Aditya Keerthi
Reported 2025-07-03 17:45:11 PDT
Attachments
Aditya Keerthi
Comment 1 2025-07-03 17:52:32 PDT
EWS
Comment 2 2025-07-07 10:01:34 PDT
Committed 297061@main (665ec0ccdce0): <https://commits.webkit.org/297061@main> Reviewed commits have been landed. Closing PR #47593 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.