REGRESSION (iOS 26): Scrubbing video on multiple sites causes back/forward navigation https://bugs.webkit.org/show_bug.cgi?id=295448 rdar://154879206

Reviewed by Abrar Rahman Protyasha and Wenson Hsieh.

UIKit introduced a new content swipe gesture in iOS 26 for swipes that originate
on navigation controller content. Consequently, swipes that do not occur at the
screen edge may also result in back/forward navigation.

At the moment, UIKit gesture recognizer does not play nicely with WebKit's
gesture recognizers. Until WebKit is ready to support the feature, disable
UIKit's content swipe gesture.

* Source/WTF/wtf/PlatformHave.h:
* Source/WebKit/Platform/spi/ios/UIKitSPI.h:
* Source/WebKit/UIProcess/ios/ViewGestureControllerIOS.mm:
(-[WKSwipeTransitionController initWithViewGestureController:gestureRecognizerView:]):

Canonical link: https://commits.webkit.org/297061@main